k8s/shared/namespace.yaml
# Namespace: Tạo không gian riêng cho project
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    environment: development
